--- a/styles/main.css
+++ b/styles/main.css
@@ -16,8 +16,9 @@
     --fontColorOnHeader: #1E1E1E;
     /* Button */
     --btnBg: #EAB3B3;
+    /* Spacing */
+    --spacing: margin-bottom: 
 }
-
 
 /* ============= Global - HTML ============= */
 * {
@@ -32,10 +33,11 @@ body {
 
 a {
     text-decoration: none;
+    color: var(--fontcolor);
 }
 
-.wrapper {
-    min-height: 100vh;
+button a {
+    color: var(--btnFontColor);
 }
 
 /* ============= Typography ============= */
@@ -62,11 +64,11 @@ section {
     margin: 2.5rem 0;
 }
 
-.container {
+/* .container {
     max-width: 80rem;
     margin: 0 auto;
     padding: 0 1rem;
-}
+} */
 
 .is-flex {
     display: flex;
@@ -75,7 +77,7 @@ section {
 .is-grid {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    gap: 1rem;
+    gap: 2rem;
 }
 
 /* Align */
@@ -83,20 +85,19 @@ section {
 .align_center {align-items: center;}
 .justi_cen {justify-content: center;}
 
-
 /* gird - column */
-.col-1 { grid-column: span 1; }
-.col-2 { grid-column: span 2; }
-.col-3 { grid-column: span 3; }
-.col-4 { grid-column: span 4; }
-.col-5 { grid-column: span 5; }
-.col-6 { grid-column: span 6; }
-.col-7 { grid-column: span 7; }
-.col-8 { grid-column: span 8; }
-.col-9 { grid-column: span 9; }
-.col-10 { grid-column: span 10; }
-.col-11 { grid-column: span 11; }
-.col-12 { grid-column: span 12; }
+.col-1-sm { grid-column: span 1; }
+.col-2-sm { grid-column: span 2; }
+.col-3-sm { grid-column: span 3; }
+.col-4-sm { grid-column: span 4; }
+.col-5-sm { grid-column: span 5; }
+.col-6-sm { grid-column: span 6; }
+.col-7-sm { grid-column: span 7; }
+.col-8-sm { grid-column: span 8; }
+.col-9-sm { grid-column: span 9; }
+.col-10-sm { grid-column: span 10; }
+.col-11-sm { grid-column: span 11; }
+.col-12-sm { grid-column: span 12; }
 
 /* ============= Header & Footer ============= */
 header, footer {
@@ -104,7 +105,7 @@ header, footer {
 }
 
 header {
-    font-size: 1.1rem;
+    font-size: 1rem;
 }
 
 /* Header */
@@ -112,10 +113,12 @@ header {
     background-color: var(--bgYellow);
     width: auto;
     height: 100vh;
+    margin: auto 0;
 }
+
 .header_wrapper {
-    max-width: 85%;
-    height: 10.563rem;
+    max-width: 90%;
+    height: 5rem;
     margin: 0 auto;
     padding: 0 1rem;
 }
@@ -126,16 +129,33 @@ header {
 }
 
 .site-header__logo img {
-    width: 45px;
+    position: relative;
+    width: 3.125rem;
 }
 
-.site-header__nav {
-    flex-grow: 1;
-    justify-content: end;
+/* header - hamburger menu */
+
+.site-header__menu-icon  {
+    display: block;
+    cursor: pointer;
 }
+
+@media all and (max-width: 834px) {
+    .site-header__nav {
+        flex-grow: 1;
+        justify-content: end;
+        position: fixed;
+        left: -100%;
+    }
+
+    .site-header {
+        justify-content: space-between;
+    }
+}
+
 
 .site-header__nav ul {
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .site-header__nav a {
@@ -159,60 +179,262 @@ Footer {
     width: 1.5rem;
 }
 
-/* ============= btn ============= */
+/* ============= global component ============= */
+/* button */
 .btn {
     background-color: var(--btnBg);
     color: var(--btnFontColor);
     border-color: var(--btnFontColor);
     border: 1px solid var(--btnFontColor);
-    border-radius: 167px;
-    padding: 12px 55px;
+    border-radius: 10.4375rem;
+    padding: 0.75rem 3.4375rem;
 }
 
-/* Btn Hover  */
-
-.btn:hover {
-    background-color: yellow;
-  }
+/* dividing line */
+.div_3dots {
+    width: 6.25rem;
+}
 
 /* ============= Home Page ============= */
 
 /* Hero Section */
 .home_wrap {
-    margin: 10px;
+    margin: 0.625rem 0;
+}
+
+.home_wrap_text {
+    margin: auto;
+    width: fit-content;
+    position: relative;
+}
+
+.home_wrap_text h1 {
+    font-size: 3.4375rem;
+}
+
+.home_wrap_text p {
+    font-size: 1.375rem;
+}
+
+.home_wrap .is-blue {
+    color: var(--blue);
 }
 
 .home_wrap img {
-    position: relative;
-    z-index: 2;
-}
-
-.circle {
-    background-color: #fff;
-    border-radius: 50%;
-    width: 21.875rem;
-    height: 21.875rem;
-    position: relative;
-    left: 19px;
-    bottom: 322px;
-    z-index: 0;
+    width: 37.5rem;
+    object-fit: cover;
 }
 
 
 /* Work */
+.homepage_work {
+    margin: 0 auto 4rem;
+}
+
+.homepage_work_wrap {
+    margin: 0 auto;
+    width: fit-content;
+}
+
+.home_work_h2 {
+    padding: 4.0625rem;
+}
+
 .home_works img {
-    width: 350px;
-    height: 323px;
+    width: 21.875rem;
+    height: 20.1875rem;
+    object-fit: cover;
     border-radius: 15%;
 }
-/* ============= Media Query ============= */
+
+.home_content {
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    line-height: 1.5;
+}
+
+/* ============= About ============= */
+/* Hero section */
+.about_hero_wrap {
+    display: grid;
+}
+
+.about_hero_photo  {
+    background-image: url(../images/about_me.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 30%;
+    width: 20.6875rem;
+    height: 20.6875rem;
+    margin: 5.5rem 0;
+}
+
+.about_hero_photo:hover {
+    background-image: url(../images/kylie_photo.JPG);
+    object-fit: cover;
+    transition: background-image 0.2s ease-in-out;
+}
+
+.about_hero_content {
+    width: 28.125rem;
+    line-height: 1.5;
+}
+
+/* My values */
+.aboutMe h2 {
+    margin: 2.0625rem;
+}
+
+.values {
+    margin: auto;
+}
+
+.values_h4 {
+    padding: 1.5rem;
+    border-radius: 3.125rem;
+    width: 18.125rem;
+}
+
+.values_p {
+    padding: 2.75rem; 
+    border-radius: 1.6875rem;
+    width: 18.125rem;
+    height: 15.625rem;
+    line-height: 1.5;
+}
+
+.bg_yel {background-color: #FCF6D5;}
+.bg_blue {background-color: #D4DEE3;}
+.bg_pink {background-color: #F1D5D5;}
+
+/* Skills */
+
+.about_spacing {
+    margin: 33px 0;
+}
+
+.circle {
+    border-radius: 50%;
+    width: 17.1875rem;
+    height: 17.1875rem;
+}
+
+.skills_scp {
+    display: flex;
+    justify-content: center;
+}
+
+.skills_item {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+}
+
+.skills_item li {
+    margin-bottom: 0.9375rem;
+}
+
+/* contact Me */
+.contactMe_container {
+    text-align: center;
+}
+
+.contactMe_container img {
+    width: 13.75rem;
+}
+
+/* ============= Discipline ============= */
+
+.disci_container_wrap {
+    display: grid;
+}
+
+.disci_heading {
+    padding-bottom: 3.4375rem;
+}
+
+.disci_container {
+    width: fit-content;
+    margin-bottom: 2.0625rem;
+    grid-column: auto / span 12;
+}
+
+.disci_container img {
+    width: 21.875rem;
+    height: 14.5rem;
+    border-radius: 2.1875rem;
+    margin-bottom: 2.0625rem;
+    object-fit: cover;
+}
+
+.disci_content {
+    line-height: 1.5;
+}
+
+/* ============= Artifact_details page_c4choco ============= */
+.art_sections {
+    /* top | right | bottom | left */
+    padding: 2.9375rem 3.4375rem 4.375rem 3.4375rem ;
+}
+
+.c4_arti_logo {
+    width: 2.75rem;
+}
+
+.c4_choco_creami {
+    width: 9.5rem;
+    background-color: #92adb8;
+    border-radius: 50%;
+}
+
+.c4_logo {
+    width: 18.75rem;
+}
+
+.c4_characters img {
+    width: 18.75rem;
+}
+
+.c4_color, .c4_color_content {
+    margin: auto;
+}
 
 
-/*  Desktop Size  */
-@media only screen and (min-width: 841px) {
+.c4_color img {
+    width: 21.875rem;
+}
+
+.c4_color_content {
+    width: 21.875rem;
+    padding: 3.125rem;
+    border-radius: 3.75rem;
+    line-height: 1.6;
+}
+
+.c4_art_collection {
+    width: 26.875rem;
+    /* overflow: hidden; */
+}
+
+.c4_art_collection img {
+    width: 15.625rem;
+    height: 15.625rem;
+    margin: 0 1.25rem;
+    border-radius: 1.875rem;
+}
+
+/* =======================================
+                Media Query 
+   =======================================*/
+
+
+/*  ========= Tablet Size =========  */
+@media only screen and (min-width: 834px) {
     body {
         background-color: darkgrey;
     }
+
     /* Layout */
 
     .col-1-md { grid-column: span 1; }
@@ -241,15 +463,177 @@ Footer {
     header {
         font-size: 1.25rem;
     }
+
+    .site-header__menu-icon img {
+        display: none;
+    }
+    
+    .site-header__nav {
+        flex-grow: 1;
+        justify-content: end;
+    }
     
     .site-header__nav a:hover {
         text-decoration: underline;
     }
     /* Logo */
     .site-header__logo img {
-        width: 75px;
+        width: 4.1875rem;
     }
-  }
+    
+    /* Btn */
+    .btn {
+        border-radius: 10.4375rem;
+        padding: 1.25rem 4.375rem;
+        font-size: 1.125rem;
+        
+    }
+    
+    /* Btn Hover  */
+    .btn:hover {
+        border:  2px solid var(--btnFontColor);
+        background-color: yellow;
+        /* I need to review the animation for the hover!!! */
+    }
 
+    /* ==== Homepage ==== */
+    /* Hero section */
+    .home_wrap {
+        width: 80%;
+        display: flex;
+        margin: 0 auto;
+    }
+
+    .home_wrap_text {
+        flex-basis: 70%;
+    }
+
+    .home_wrap_text h1 {
+        font-size: 4rem;
+    }
+
+    .home_wrap_text p {
+        font-size: 1.875rem;
+    }
+
+    .home_wrap_img {
+        flex-basis: 30%;
+    }
+
+    .home_wrap img {
+        width: 40.625rem;
+        grid-column: 9 / span 2;
+    }
+
+    .homepage_work_wrap {
+        margin: 0 auto;
+        width: fit-content;
+    }
+
+    
+    /* ==== About ==== */
+    .about_hero_wrap {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .about_hero_content {
+        width: 25rem;
+        line-height: 1.5;
+    }
+
+    .about_hero_content h1 {
+        font-size: 3rem;
+    }
+
+    .skills_wrap {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        gap: 1rem;
+    }
+
+    
+    /* ==== Discipline Pages ==== */
+    .disci_container {
+        text-align: center;
+    }
+    .disci_container img {
+        width: 600px;
+        height: 22rem;
+    }
+
+    /* ==== Artifact_details page_c4choco ==== */
+ 
+    .c4_color {
+    grid-column: 4;
+    }
+
+}
+
+/* Tablet size end here*/
+
+
+/*  ========= Desktop Size =========  */
+
+@media only screen and (min-width: 1080px) {
+body {
+    background-color: rgb(234, 150, 89);
+}
+
+/* Layout */
+.col-1-lg { grid-column: span 1; }
+.col-2-lg { grid-column: span 2; }
+.col-3-lg { grid-column: span 3; }
+.col-4-lg { grid-column: span 4; }
+.col-5-lg { grid-column: span 5; }
+.col-6-lg { grid-column: span 6; }
+.col-7-lg { grid-column: span 7; }
+.col-8-lg { grid-column: span 8; }
+.col-9-lg { grid-column: span 9; }
+.col-10-lg { grid-column: span 10; }
+.col-11-lg { grid-column: span 11; }
+.col-12-lg { grid-column: span 12; }
+
+
+
+/* ==== Homepage ==== */
+
+/* ==== About ==== */
+.about_hero_wrap {
+    width: 1000px;
+    margin: auto;
+}
+
+
+/* ==== Discipline Pages ==== */
+.disci_container {
+    display: grid;
+    grid-template-columns: repeat(12 fr1);
+    gap: 2rem;
+    text-align: unset;
+}
+
+.img_left {
+    grid-column: auto / span 6;
+}
+
+.img_left img {
+    width: 650px;
+    height: 402px;
+}
+
+.disci_content {
+    grid-column: 8 / span 3;
+}
+
+/* ==== Artifact_details page_c4choco ==== */
+ 
+.c4_color {
+    grid-column: 4;
+}
+
+
+}
 
   /* Desktop Size End */
