--- a/styles/header.css
+++ b/styles/header.css
@@ -11,9 +11,10 @@ header {
 
 .section_wrap {
    background-color: var(--bgYellow);
-   width: auto;
+   width: 100vw;
    height: 1000px;
    margin: auto 0;
+   overflow-x: hidden;
 }
 
 /* Header */
