--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,9 @@
 @import url(../styles/discipline.css);
 @import url(../styles/details.css);
 @import url(../styles/uiux_detail.css);
+@import url(../styles/uiux_hisani.css);
+@import url(../styles/branding_mooday.css);
+@import url(../styles/branding_cobear.css);
 
 /* ============= Root =============  */
 :root {
@@ -28,6 +31,9 @@
 /* ============= Global - HTML ============= */
 * {
     margin: 0 auto;
+    line-height: 1.6;
+    font-weight: 400;
+    max-width: 100%;
 }
 
 body {
@@ -37,6 +43,7 @@ body {
 a {
     text-decoration: none;
     color: var(--fontcolor);
+    cursor: pointer;
 }
 
 button a {
@@ -120,6 +127,44 @@ section {
     margin: 4rem 0;
 }
 
+.image_container {
+    position: relative;
+    border-radius: 4rem;
+    overflow: hidden;
+}
+
+.image_hover {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--blue);
+    opacity: 0;
+}
+
+.image_container:hover .image_hover {
+    opacity: 0.5;
+}
+
+.hover_text {
+    color: #fff;
+    font-size: 1.4375rem;
+    text-align: center;
+    position: relative;
+    top: 10.75rem;
+}
+
+/* the little cat filter */
+.work_filter {
+    color: var(--pink);
+    border: 1px solid var(--pink);
+    font-size: 0.75rem;
+    border-radius: 4rem;
+    padding: 0.3125rem 0.8125rem;
+    margin: 0.3125rem 0.1875rem;
+}
+
 /* =======================================
                 Media Query 
    =======================================*/
@@ -166,13 +211,19 @@ section {
         border-radius: 10.4375rem;
         padding: 1.25rem 4.375rem;
         font-size: 1.125rem;
-        
+        text-align: center;
+        margin: 3.4375rem 1rem;
     }
     /* Btn Hover  */
 
     .btn:hover {
-        border:  2px solid var(--btnFontColor);
-        background-color: yellow;
+        border: 2px solid var(--btnFontColor);
+        background-color: var(--yellow);
+        box-shadow: #7497c1 0.375rem 0.375rem 0.0625rem;    
+    }
+
+    .btn:hover:after {
+        content: " ➡️ ";
     }
 
 } /* Tablet size end here*/
@@ -180,7 +231,7 @@ section {
 /*  ========= Desktop Size =========  */
 @media only screen and (min-width: 1080px) {
 body {
-    font-size: 18px;
+    font-size: 1.125rem;
 }
 
 /* Layout */
