--- a/styles/about.css
+++ b/styles/about.css
@@ -1,26 +1,50 @@
 /* ============= About ============= */
+/* Header + hero section */
+.about_section_wrap {
+    background-color: var(--bgYellow);
+    width: 100vw;
+    /* height: 55%; */
+    margin: auto 0;
+    padding-bottom: 2.0625rem;
+ }
 
 /* Hero section */
 .about_hero_wrap {
-    display: grid;
     gap: 1rem;
-    justify-content: center;
 }
 
 .about_hero_container {
     position: relative;
-    border-radius: 30%;
+    border-radius: 2.0625rem;
     margin: 1rem 0;
     overflow: hidden;
+    /* margin-right: 0.9375rem; */
 }
 
+.hearts {
+    position: absolute;
+    top: 6.25rem;
+    left: 2.0625rem;
+    z-index: 10;
+}
+
+/* .circles {
+    position: absolute;
+    top: 12.75rem;
+    left: 20.3125rem;
+    z-index: 12;
+} */
+
+/* My photo */
 .about_hero_photo {
     background-image: url(../images/Canada_Life.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 20.6875rem;
-    height: 20.6875rem;
+    /* width: 20.6875rem;
+    height: 20.6875rem; */
+    width: 22rem;
+    height: 23.125rem;
 }
 
 .about_hero_photo::after {
@@ -34,22 +58,190 @@
     background-size: cover;
     background-image: url(../images/kylie_photo.JPG);
     opacity: 0;
-    transition: all 0.25s ease;
+    transition: all 0.5s ease;
 }
 
 .about_hero_photo:hover::after {
     opacity: 1;
 }
 
+.hoverme {
+    display: none;
+}
+
 .about_hero_content {
-    width: 18rem;
+    width: 20rem;
     line-height: 1.5;
     align-items: center;
     margin: auto;
 }
 
+.about_hero_content h1 {
+    font-size: 2.5rem;
+}
+
+.dark_pink_text {
+    color: #DD6F6F;
+    font-weight: 900;
+}
+
+.medi_pink_text {
+    color: #833d3d;
+    background-color: #f8c4cba9;
+    padding: 0.1875rem;
+    border-radius: 0.3125rem;
+}
+
+.emoji {
+    font-size: 1.4375rem;
+    letter-spacing: 0.1875rem;
+    text-align: center;
+}
+
+.about_hero_content h4 {
+    font-size: 1.5rem;
+    color: var(--blue);
+    font-weight: 600;
+}
+
+.about_hero_content h1, 
+.about_hero_content h4,
+.about_hero_content p,
+.lang h4 {
+    margin-bottom: 1.9375rem;
+    text-align: center;
+}
+
+
+/* Language */
+.lang {
+    display: grid;
+    justify-content: space-around;
+    justify-items: center;
+    margin: 6.25rem 0;
+}
+
+
+.lang h4 {
+    justify-content: right;
+    color: var(--blue);
+    font-size: 1.5rem;
+}
+
+.lang ul li {
+    line-height: 2.0625rem;
+    text-align: center;
+    background-color: #F1D5D5;
+    padding: 0.9375rem 1.875rem;
+    border-radius: 2.0625rem;
+    margin-top: 0.9375rem;
+    border: 0.125rem solid var(--pink);
+    cursor: pointer;
+}
+
+.lang ul li:hover {
+    background-color: #FCF6D5;
+    border: 0.125rem solid var(--yellow);
+    transition: all 0.3s ease-out;
+}
+
+.can:hover:after {
+    content: "大家好！(Native)";
+}
+
+.ch:hover:after {
+    content: "你好！(Fluent)";
+}
+
+.jp:hover:after {
+    content: "初めまして!(Fluent)";
+}
+
+.en:hover:after {
+    content: "Hello!!(Fluent)";
+}
+
+/* Skillsets */
+
+.skills_bg {
+    background-color: #e49e9e;
+    border-radius: 0.9375rem;
+    border: #833d3d 2px solid;
+    padding: 2.0625rem;
+    margin: 2.75rem;
+}
+
+.skills_bg li {
+    line-height: 2.0625rem;
+    color: #492d2d;
+}
+
+
+/* Passionates */
+.hobby_wrapper {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 1rem;
+    justify-content: center;
+    width: 1080px;
+    margin: auto;
+    padding-top: 2.75rem;
+}
+
+.hobby_container {
+    width: 300px;
+    height: 480px;
+    /* background-color: #e49e9e; */
+    padding: 15px;
+    margin: auto;
+    line-height: 1.4;
+}
+
+.hobby_container img {
+    object-fit: cover;
+    width: 300px;
+    height: 300px;
+    margin: 0;
+    border-radius: 15px;
+    box-shadow: 7px 7px 5px #8fb3c464;
+}
+
+.hobby_content {
+    padding: 10px 5px;
+}
+
+.hobby_content h4 {
+    font-weight: 900;
+    color: #DD6F6F;
+}
+
+.hobby_content h4, 
+.hobby_content p {
+    margin-bottom: 8px;
+}
+
+/* Contact */
+.logo_animation img {
+    width: 180px;
+    height: 180px;
+    animation-name: spin;
+    animation-duration: 4000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear; 
+     
+}
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
 /* My values */
-.aboutMe h2 {
+/* .aboutMe h2 {
     margin: 2.0625rem;
 }
 
@@ -71,13 +263,11 @@
     line-height: 1.5;
 }
 
-.bg_yel {background-color: #FCF6D5;}
-.bg_blue {background-color: #D4DEE3;}
-.bg_pink {background-color: #F1D5D5;}
+*/
 
 /* Skills */
 
-.about_spacing {
+/* .about_spacing {
     margin: 2.0625rem 0;
 }
 
@@ -100,11 +290,11 @@
 
 .skills_item li {
     margin-bottom: 0.9375rem;
-}
+} */
 
 /* contact Me */
 
-.contant_image {
+/* .contant_image {
     margin: 3.4375rem 0;
     width: 15rem;
 }
@@ -119,10 +309,9 @@
 }
 
 .contact_content p {
-    /* text-decoration: underline; */
     font-size: 2.0625rem;
     margin-bottom: 3.4375rem;
-}
+} */
 
 /* =======================================
                 Media Query 
@@ -132,20 +321,54 @@
 
     .about_hero_wrap {
         display: flex;
+        max-width: 56.25rem;
         align-items: center;
-        justify-content: space-evenly;
+        margin: auto;
+    }
 
+    .hoverme {
+        display: block;
+        position: absolute;
+        top: 18rem;
+        left: 7.375rem;
+        z-index: 5;
+        background-color: var(--yellow);
+        border-radius: 1.25rem;
+        padding: 0.3125rem 0.75rem;
+        color: rgb(98, 72, 72);
     }
 
     .about_hero_content {
-        width: 25rem;
+        width: auto;
     }
 
     .about_hero_content h1 {
         font-size: 3rem;
     }
 
-    .about_spacing {
+    .about_hero_content h2 {
+        font-size: 2.2rem;
+    }
+
+    .about_hero_content h4 {
+        font-size: 1.6rem;
+    }
+
+    .about_hero_content h1, 
+    .about_hero_content h4,
+    .about_hero_content p {
+        text-align: left;
+    }
+
+    .emoji {
+        text-align: left;
+    }
+
+    .lang h4 {
+        font-size: 1.875rem;
+    }
+
+    /* .about_spacing {
         margin: 3.4375rem 0;
     }
 
@@ -157,31 +380,59 @@
 
     .contact_content h3 {
         font-size: 5.5rem;
+    } */
+
+    .skills {
+        display: flex;
+        justify-content: center;
     }
-    
+
+    .skills_container {
+        width: 28.125rem;
+    }
+
+    .hobby_container {
+        width: 350px;
+        height: 550px;
+}
 }
 
 @media only screen and (min-width: 1080px) {
 
     .about_hero_wrap {
-        width: 62.5rem;
+        /* width: 62.5rem; */
         margin: auto;
-        padding-top: 6.25rem;
+        padding-top: 3rem;
+        max-width: 64.0625rem;
     }
+
     /* .about_hero_content {
         width: 29rem;
     } */
+
+    .about_hero_content h1 {
+        font-size: 3.6rem;
+    }
+
+    .emoji {
+        font-size: 1.875rem;
+        letter-spacing: 0.25rem;
+    }
+
+    .about_hero_content h4 {
+        font-size: 2rem;
+    }
 
     .about_hero_content p{
         font-size: 1.25rem;
     }
 
-    .values_h4 {
+    /* .values_h4 {
         width: 21.125rem;
     }
     
     .values_p {
         width: 21.125rem;
         height: 17.625rem;
-    }
+    } */
 }
