--- a/styles/home.css
+++ b/styles/home.css
@@ -1,27 +1,67 @@
 /* ============= Home Page ============= */
 
+/* Header + first section wrapper */
+
+.section_wrap {
+    background-color: var(--bgYellow);
+    width: 100vw;
+    height: 80%;
+    margin: auto 0;
+    /* overflow-x: hidden; */
+    overflow: hidden;
+ }
+
 /* Hero Section */
+
 .home_wrap {
     margin: auto;
     display: table;
+    max-width: 1200px;
 }
 
 .home_wrap_text {
     margin: 1.5625rem;
-    padding-top: 2.0625rem;
-    
+    padding-top: 1.5625rem;
 }
 
 .home_wrap_text h1 {
-    font-size: 3rem;
+    font-size: 3.22rem;
 }
 
-.home_wrap .is-blue {
-    color: var(--blue);
+.home_wrap_text h4 {
+    font-size: 1.5rem;
+}
+
+.home_wrap_text p {
+    margin-bottom: 20px;
+    color: var(--btnFontColor);
+}
+
+.pink_text {
+    color: var(--pink);
+    font-weight: 900;
 }
 
 .home_hi img {
     width: 23.5625rem;
+}
+
+/* ATC button */
+.home_button {
+    background-color: var(--bgPink);
+    padding: 9px 18px;
+    border-radius: 33px;
+}
+
+.home_button:hover {
+    background-color: var(--pink);
+    color: #fff;
+    transition: 0.3s;
+    /* border: 2px solid var(--blue); */
+}
+
+.home_button:hover:after {
+    content: " 👉🏻";
 }
 
 /* Work */
@@ -38,10 +78,16 @@
     padding: 4.0625rem;
 }
 
-.home_works img {
-    width: 22.5625rem;
-    height: 18.125rem;
+.image_bg img {
+    width: 21.5625rem;
+    height: 16.125rem;
     object-fit: cover;
+    border-radius: 33px;
+}
+
+.image_hover:hover {
+    transform: scale(2);
+    transition: .3s;
 }
 
 .home_content {
@@ -50,16 +96,55 @@
     line-height: 1.5;
 }
 
+/* image hover */
+.image_container {
+    position: relative;
+    border-radius: 33px;
+    overflow: hidden;
+}
+
+.image_hover {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #e0dbd5;
+    opacity: 0;
+}
+
+.image_container:hover .image_hover {
+    opacity: 0.8;
+}
+
+.hover_text {
+    color: var(--btnFontColor);
+    font-size: 1.4375rem;
+    text-align: center;
+    position: relative;
+    top: 8rem
+}
+
+.narrow {
+    animation: narrow 2s ease infinite;
+    margin: 15px;
+  }
+  @keyframes narrow {
+      0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+      40% {transform: translateY(-30px);}
+      60% {transform: translateY(-15px);}
+  }
+
 
 /* =======================================
                 Media Query 
    =======================================*/
 
-@media only screen and (min-width: 834px) {
+@media only screen and (min-width: 863px) {
 
     /* Hero section */
     .home_wrap {
-        width: 80%;
+        max-width: 90%;
         display: flex;
         margin-top: 2.75rem;
     }
@@ -73,16 +158,21 @@
     }
 
     .home_wrap_text h1 {
-        font-size: 3.2rem;
+        font-size: 3.5rem;
         margin-top: 0.625rem;
     }
 
+    .home_wrap_text h4 {
+        font: 1.7rem;
+    }
+
     .home_wrap_text p {
-        font-size: 1.375rem;
+        font-size: 1.2rem;
     }
 
     .home_hi img {
         width: 40.625rem;
+        /* width: 42rem; */
     }
 
     .homepage_work_wrap {
@@ -91,17 +181,32 @@
     }
 
     .home_works img {
-    width: 26.6875rem;
-    height: 22.375rem;
-    
-}
+        width: 31.6875rem;
+        height: 22.375rem;
+    }
+
+    .hover_text {
+        top: 11rem;
+    }
 
 }
 
 @media only screen and (min-width: 1080px) {
+
+    .home_wrap {
+        max-width: 1200px;
+    }
+
     .home_wrap_text h1 {
         font-size: 4rem;
         margin-top: 3.9375rem;
     }
 
+    .home_wrap_text h4 {
+        font-size: 2rem;
+    }
+
+    .works_container {
+        max-width: 1300px;
+    }
 }
