Add new project Choffe

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,7 @@
 @import url(../styles/uiux_hisani.css);
 @import url(../styles/branding_mooday.css);
 @import url(../styles/branding_cobear.css);
+@import url(../styles/dev_choffe.css);
 
 
 /* ============= Root =============  */
