--- a/styles/discipline.css
+++ b/styles/discipline.css
@@ -3,9 +3,8 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: 1rem;
-    max-width: 1200px;
     margin: auto;
-    margin-top: 45px;
+    margin-top: 2.8125rem;
 }
 
 /* Filter */
@@ -13,13 +12,13 @@
     display: flex;
     gap: 1rem;
     justify-content: center;
-    margin: 33px 0;
+    margin: 2.0625rem 0;
 }
 
 .filter ul li {
     background-color: var(--bgYellow);
-    padding: 5px 15px;
-    border-radius: 33px;
+    padding: 0.3125rem 0.9375rem;
+    border-radius: 2.0625rem;
     cursor: pointer;
 }
 
@@ -32,13 +31,12 @@
     background-color: var(--bgPink);
 }
 
-
 /* Card */
 
 .cards {
-    width: 359px;
-    height: 415px;
-    border-radius: 26px;
+    width: 22.4375rem;
+    height: 25.9375rem;
+    border-radius: 1.625rem;
     border: 1px solid #D6DFED;
     background-color: #FFFDEF;
     grid-column: auto / span 12;
@@ -46,33 +44,38 @@
 }
 
 .cards img {
-    width: 324px;
-    height: 222px;
-    border-radius: 26px;
+    width: 20.25rem;
+    height: 13.875rem;
+    border-radius: 1.625rem;
     position: relative;
-    top: 13px;
-    left: 18px;
+    top: 0.8125rem;
+    left: 1.125rem;
     object-fit: cover;
 }
 
+.cards img:hover {
+    opacity: 0.5;
+    transition: 0.5s ease;
+}
+
 .project_content {
-    padding: 24px 22px;
+    padding: 1.5rem 1.375rem;
     justify-content: center;
     line-height: 1.5;
 }
 
 .project_content p {
-    margin-bottom: 12px;
+    margin-bottom: 0.75rem;
 }
 
 /* Filter tags */
 .tags {
-    font-size: 14px;
-    padding: 3px 13px;
+    font-size: 0.875rem;
+    padding: 0.1875rem 0.8125rem;
     color: var(--btnFontColor);
     background: #F1D5D5;
     border: 1px solid #EAB3B3;
-    border-radius: 32px;
+    border-radius: 2rem;
 }
 
 
@@ -85,6 +88,10 @@
             grid-column: auto / span 6;
         }
 
+        .projects_container {
+            max-width: 50rem;
+        }
+
         .project_content h2, .project_content h4, .project_content p {
             font-size: revert;
         }
@@ -94,5 +101,9 @@
    @media only screen and (min-width: 1080px){
     .cards {
         grid-column: auto / span 4;
+    }
+
+    .projects_container {
+        max-width: 75rem;
     }
    }
