--- a/styles/home.css
+++ b/styles/home.css
@@ -78,16 +78,13 @@
     padding: 4.0625rem;
 }
 
+
 .image_bg img {
-    width: 21.5625rem;
-    height: 16.125rem;
+    width: 350px;
+    height: 258px;
     object-fit: cover;
     border-radius: 33px;
-}
-
-.image_hover:hover {
-    transform: scale(2);
-    transition: .3s;
+    overflow: hidden;
 }
 
 .home_content {
@@ -109,12 +106,13 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: #e0dbd5;
+    background-color: rgb(168, 177, 197);
     opacity: 0;
+    border-radius: 33px;
 }
 
 .image_container:hover .image_hover {
-    opacity: 0.8;
+    opacity: 0.9;
 }
 
 .hover_text {
@@ -122,7 +120,12 @@
     font-size: 1.4375rem;
     text-align: center;
     position: relative;
-    top: 8rem
+    top: 7.5rem;
+}
+
+.hover_text:hover {
+    transform: scale(2);
+    transition: .3s;
 }
 
 .narrow {
