--- a/styles/home.css
+++ b/styles/home.css
@@ -5,7 +5,7 @@
 .section_wrap {
     background-color: var(--bgYellow);
     width: 100vw;
-    height: 80%;
+    height: 1000px;
     margin: auto 0;
     /* overflow-x: hidden; */
     overflow: hidden;
@@ -16,12 +16,26 @@
 .home_wrap {
     margin: auto;
     display: table;
-    max-width: 1200px;
+    max-width: 75rem;
 }
 
 .home_wrap_text {
     margin: 1.5625rem;
     padding-top: 1.5625rem;
+    animation: rollin 2s ease-in ;
+}
+
+@keyframes rollin {
+
+    0% {
+        opacity: 0;
+        transform: translateX(-50%) rotate(0deg);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0px) rotate(0deg);
+    }
+      
 }
 
 .home_wrap_text h1 {
@@ -33,7 +47,7 @@
 }
 
 .home_wrap_text p {
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
     color: var(--btnFontColor);
 }
 
@@ -44,6 +58,17 @@
 
 .home_hi img {
     width: 23.5625rem;
+    animation: wobble 2s ease;
+}
+
+@keyframes wobble {
+    0% { transform: translateX(0%); }
+    15% { transform: translateX(-25%) rotate(-5deg); }
+    30% { transform: translateX(20%) rotate(3deg); }
+    45% { transform: translateX(-15%) rotate(-3deg); }
+    60% { transform: translateX(10%) rotate(2deg); }
+    75% { transform: translateX(-5%) rotate(-1deg); }
+    100% { transform: translateX(0%); }
 }
 
 /* ATC button */
@@ -66,11 +91,11 @@
 
 /* Work */
 .homepage_work {
-    margin: 0 auto 4rem;
+    margin: 5rem 0;
 }
 
 .homepage_work_wrap {
-    margin: 0 auto;
+    margin: auto;
     width: fit-content;
 }
 
@@ -130,13 +155,18 @@
 
 .narrow {
     animation: narrow 2s ease infinite;
-    margin: 15px;
+    margin: 1rem;
+    
   }
+
   @keyframes narrow {
       0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
       40% {transform: translateY(-30px);}
       60% {transform: translateY(-15px);}
   }
+
+
+
 
 
 /* =======================================
